Take care of some deprecated warnings
(cherry picked from commit 177eb3fe403dd233ccfdca110e2672801ee67a3c)