@@ -1061,12 +1061,16 @@ public abstract class RMQMessage implements Message, Cloneable {
         } else {
             try {
                 // instantiate the message object with the thread context classloader
-                return (RMQMessage) Class.forName(messageClass, true, Thread.currentThread().getContextClassLoader()).newInstance();
+                return (RMQMessage) Class.forName(messageClass, true, Thread.currentThread().getContextClassLoader()).getDeclaredConstructor().newInstance();
             } catch (InstantiationException e) {
                 throw new RMQJMSException(e);
             } catch (IllegalAccessException e) {
                 throw new RMQJMSException(e);
             } catch (ClassNotFoundException e) {
+                throw new RMQJMSException(e);
+            } catch (NoSuchMethodException e) {
+                throw new RMQJMSException(e);
+            } catch (InvocationTargetException e) {
                 throw new RMQJMSException(e);
             }
         }
